# iono_zond_post_processing

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh
src/: DoubleChannelCalculations.cpp  GlobalConfiguration.hpp  GlonassSatellite.cpp  GlonassSatelliteChannel.cpp  GlonassSatelliteChannel.hpp  GnssDataMeasurements2.hpp  GpsSatellite.hpp  GpsSatelliteChannel.cpp  ICalculation.hpp  IDoubleChannelCalculation.hpp  ISigmaPhiCalculation.hpp  IonoZondExperiment16.cpp  IonoZondExperiment17.cpp  Logger.cpp  PashintsevCalculation.cpp  PashitsevSatelliteChannel.cpp  PashitsevSatelliteChannel.hpp  PlotData.cpp  PlotData.hpp  PredictionsExperiments.hpp  S4Calculation.cpp  S4Calculation.hpp  S4IrregulationsSearch.hpp  Satellite.cpp  SatelliteChannel.cpp  SatelliteChannel.hpp  SatelliteGroup.cpp  SigmaPhiCalculation.cpp  SvmPredictionData.cpp  ThreadManager.cpp  ThreadManager.hpp  crc32.cpp  crc32.hpp  gnss_const.hpp  gnss_functions.cpp  main.cpp  pashintsev_const.hpp  project_defines.hpp  server_consts.cpp  struct_headers.hpp
src/calculations/: DoubleChannelCalculations.cpp  DoubleChannelCalculations.hpp  IS4Calculation.hpp  PashintsevCalculation.hpp  S4IrregulationsSearch.cpp  SigmaPhiCalculation.hpp  pashintsev_const.cpp
src/common/: GlobalConfiguration.cpp  GnssCommonTypes.hpp  GnssLogTime.cpp  GnssLogTime.hpp  common_functions.cpp  common_functions.hpp  dtoa_milo.h  gnss_const.cpp  gnss_functions.hpp  itoa_sse2.hpp  server_consts.hpp
src/experiments/: IonoZondExperiment16.cpp  IonoZondExperiment16.hpp  IonoZondExperiment17.cpp  IonoZondExperiment17.hpp  IonoZondExperiment19.cpp  IonoZondExperiment19.hpp  IonoZondExperiment20.cpp  IonoZondExperiment20.hpp  IonoZondExperiment21.cpp  IonoZondExperiment21.h  PredictionsExperiments.cpp  PredictionsExperiments.hpp  SvmPredictionData.cpp  SvmPredictionData.hpp
src/logger/: Logger.hpp
src/parser/: LogParserThread.cpp  LogParserThread.hpp
src/satellite/: GlonassSatellite.hpp  GpsSatellite.cpp  GpsSatelliteChannel.hpp  ISatellite.hpp  ISatelliteChannel.hpp  Satellite.hpp  SatelliteGroup.hpp
